exports[`borderRadius properly applies unitless value 1`] = `
Object {
  "borderTopLeftRadius": 5,
  "borderTopRightRadius": 5,
}
`;

exports[`borderRadius properly applies unitless zero 1`] = `
Object {
  "borderBottomLeftRadius": 0,
  "borderTopLeftRadius": 0,
}
`;

exports[`borderRadius returns the proper values for the bottom side 1`] = `
Object {
  "borderBottomLeftRadius": "5px",
  "borderBottomRightRadius": "5px",
}
`;

exports[`borderRadius returns the proper values for the left side 1`] = `
Object {
  "borderBottomLeftRadius": "5px",
  "borderTopLeftRadius": "5px",
}
`;

exports[`borderRadius returns the proper values for the right side 1`] = `
Object {
  "borderBottomRightRadius": "5px",
  "borderTopRightRadius": "5px",
}
`;

exports[`borderRadius returns the proper values for the top side 1`] = `
Object {
  "borderTopLeftRadius": "5px",
  "borderTopRightRadius": "5px",
}
`;
